# quickemu-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: docs.yml  release.yml  rust-clippy.yml  rust.yml  update_ci_cache.yml
docs/: book.toml
docs-bin/book/: index.html  print.html  searchindex.js  searchindex.json
docs-bin/src/: introduction.md  quickget.md
docs/book/: 404.html  index.html  print.html  toc.html  toc.js
docs/book/usage/: installation.html  quickget.html
docs/src/: SUMMARY.md  introduction.md
docs/src/configuration/: configuration.md
docs/src/usage/: installation.md  quickemu.md  quickget.md
quickemu/: Cargo.toml
quickemu/cli/: Cargo.toml
quickemu/cli/src/: args.rs  main.rs
quickemu/cli/src/args/: display.rs  io.rs  machine.rs
quickemu/core/: Cargo.toml
quickemu/core/i18n/en/: quickemu_core.ftl
quickemu/core/src/: args.rs  config.rs  data.rs  error.rs  i18n.rs  lib.rs  live_vm.rs  utils.rs
quickemu/core/src/args/: arch.rs  audio.rs  cpu.rs  display.rs  guest.rs  images.rs  io.rs  machine.rs  network.rs
quickemu/core/src/args/images/: disks.rs  img.rs  iso.rs
quickemu/core/src/args/io/: audio.rs  display.rs  keyboard.rs  mouse.rs  public_dir.rs  spice.rs  usb.rs
quickemu/core/src/args/machine/: boot.rs  cpu.rs  ram.rs  tpm.rs
quickemu/core/src/args/network/: monitor.rs
quickemu/core/src/data/: display.rs  guest.rs  image.rs  io.rs  machine.rs  network.rs
quickemu/legacy/: Cargo.toml
quickemu/legacy/src/: actions.rs  config.rs  lib.rs  main.rs
quickemu/legacy/src/qemu_args/: arch.rs  display.rs  guest_os.rs  images.rs
quickemu/src/: actions.rs  config.rs  config_parse.rs  lib.rs  main.rs  qemu_args.rs  validate.rs
quickemu/src/qemu_args/: arch.rs  display.rs  external_command.rs  guest_os.rs  images.rs
quickemu_api/: Cargo.toml
quickemu_api/src/: lib.rs
quickget/: Cargo.toml
quickget/cli/: Cargo.toml
quickget/cli/i18n/en/: quickget_rs.ftl
quickget/cli/src/: config.rs  i18n.rs  main.rs
quickget/core/: Cargo.toml
quickget/core/i18n/en/: quickget_core.ftl
quickget/core/src/: config_search.rs  data_structures.rs  error.rs  i18n.rs  instance.rs  lib.rs
quickget/src/: configuration.rs  data_structures.rs  find_entry.rs  main.rs  parse_data.rs
quickget_ci/: Cargo.toml
quickget_ci/src/: lib.rs  linux.rs  main.rs  store_data.rs  utils.rs
quickget_ci/src/bsd/: mod.rs
quickget_ci/src/linux/: arch.rs  debian.rs  fedora_redhat.rs  independent.rs  ubuntu.rs
quickget_ci/src/linux/arch/: manjaro.rs
src/: actions.rs  config.rs  config_parse.rs  main.rs  qemu_args.rs  validate.rs
src/qemu_args/: arch.rs  display.rs  guest_os.rs  images.rs
