[package]
name = "quickemu_api"
version = "0.1.0"
edition = "2021"

[dependencies.quickemu-rs]
path = "../quickemu"
default_features = false
features = ["control_launch"]
optional = true

#[dependencies.quickget]
#path = "../quickget"
#optional = true

[features]
default = ["launch_vms", "check_smartcard"]

launch_vms = ["quickemu-rs"]
check_smartcard = ["quickemu-rs/check_smartcard"]
