[package]
name = "quickget-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
quickget_ci = { path = "../quickget_ci" }
reqwest = "0.12.4"
serde_json = "1.0.117"
toml = "0.8.13"
zstd = "0.13.1"
quick_fetcher = "0.2.2"
tokio = { version = "1.38.0", features = ["macros"] }
env_logger = "0.11.3"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
itertools = "0.13.0"
which = "6.0.1"
