[package]
name = "quickget-rs"
version = "0.7.3"
edition = "2021"

[lib]
name = "quickget"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
quickemu-rs = { path = "../quickemu" }
reqwest = "0.12.4"
serde_json = "1.0.117"
serde = "1.0.202"
toml = "0.8.13"
zstd = "0.13.1"
quick_fetcher = "0.4.3"
#quick_fetcher = { path = "../../quick_fetcher" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.3"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
itertools = "0.13.0"
which = "6.0.1"
