[package]
name = "quickget_ci"
version = "0.7.3"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
libdeflater = "1.20.0"
log = "0.4.21"
once_cell = "1.19.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
quickemu-rs = { path = "../quickemu" }
quickget-rs = { path = "../quickget" }
regex = "1.10.4"
reqwest = "0.12.4"
reqwest-middleware = "0.3.1"
reqwest-retry = "0.5.0"
serde = "1.0.202"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync"] }
zstd = "0.13.1"
