[package]
name = "quickemu_core"
edition = "2021"
version = "1.0.0"
license = "GPL-3.0 OR GPL-2.0"

[dependencies]
anyhow = "1.0.81"
derive_more = { version = "1.0.0", features = ["display", "as_ref"] }
dirs = "5.0.1"
display-info = { version = "0.5.1", optional = true }
env_logger = "0.11.3"
log = "0.4.21"
num_cpus = "1.16.0"
once_cell = "1.19.0"
pathdiff = "0.2.1"
raw-cpuid = "11.0.2"
serde = { version = "1.0.201", features = ["derive"] }
sysinfo = { version = "0.30.10", default-features = false }
toml = "0.8.12"
which = "6.0.1"
quickget_core = { path = "../../quickget/core" }
thiserror = "2.0.8"
itertools = "0.13.0"

[features]
display_resolution = ["display-info"]
