[package]
name = "quickemu_core"
edition = "2021"
version = "1.0.0"
license = "GPL-3.0 OR GPL-2.0"

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "as_ref"] }
dirs = { version = "5.0.1", optional = true }
display-info = { version = "0.5.1", optional = true }
log = { version = "0.4.21", optional = true }
num_cpus = { version = "1.16.0", optional = true }
raw-cpuid = { version = "11.0.2", optional = true }
serde = { version = "1.0.201", features = ["derive"] }
sysinfo = { version = "0.30.10", default-features = false, optional = true }
toml = { version = "0.8.12", optional = true }
which = { version = "6.0.1", optional = true }
thiserror = { version = "2.0.8", optional = true }
itertools = { version = "0.13.0", optional = true }
size = { version = "0.4.1", optional = true }
memfd-exec = { version = "0.2.1", optional = true }

[features]
default = ["quickemu", "display_resolution", "smartcard_args", "qemu_8_1"]

quickemu = [
    "dirs",
    "log",
    "num_cpus",
    "raw-cpuid",
    "sysinfo",
    "toml",
    "which",
    "thiserror",
    "itertools",
    "size",
]

display_resolution = ["quickemu", "display-info"]
smartcard_args = ["quickemu"]

qemu_8_1 = ["quickemu"]

inbuilt_commands = ["qemu_8_1", "smartcard_args", "memfd-exec"]
