[package]
name = "quickemu_core"
edition = "2021"
version = "2.0.1"
license = "GPL-3.0 OR GPL-2.0"

[dependencies]
derive_more = { version = "2.0.0", features = ["display", "as_ref", "from"] }
dirs = { version = "5.0.1", optional = true }
display-info = { version = "0.5.1", optional = true }
log = { version = "0.4.21", optional = true }
num_cpus = { version = "1.16.0", optional = true }
raw-cpuid = { version = "11.0.2", optional = true }
serde = { version = "1.0.201", features = ["derive"] }
sysinfo = { version = "0.30.10", default-features = false, optional = true }
toml = { version = "0.8.12", optional = true }
which = { version = "6.0.1", optional = true }
itertools = "0.13.0"
size = { version = "0.4.1", optional = true }
memfd-exec = { version = "0.2.1", optional = true }
serde_json = { version = "1.0.137", optional = true }
strum = { version = "0.26.3", features = ["derive"] }
i18n-embed-fl = { version = "0.9.3", optional = true }
rust-embed = { version = "8.5.0", optional = true }

[dependencies.i18n-embed]
optional = true
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[features]
default = ["quickemu", "display_resolution", "smartcard_args", "qemu_8_1"]

quickemu = [
    "dirs",
    "log",
    "num_cpus",
    "raw-cpuid",
    "sysinfo",
    "toml",
    "which",
    "i18n-embed-fl",
    "i18n-embed",
    "rust-embed",
    "size",
    "serde_json",
]

display_resolution = ["quickemu", "display-info"]
smartcard_args = ["quickemu"]

qemu_8_1 = ["quickemu"]

inbuilt_commands = ["qemu_8_1", "smartcard_args", "memfd-exec"]
