[package]
name = "quickget-rs"
version = "2.0.1"
edition = "2021"
license.workspace = true

[dependencies]
quickget_core = { path = "../core" }
tokio = { version = "1.39.2", features = ["full"] }
anyhow = "1.0.86"
quickemu_core = { path = "../../quickemu/core", default-features = false }
itertools = "0.13.0"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
indicatif = "0.17.8"
serde_json = "1.0.122"
csv = "1.3.0"
serde = "1.0.205"
